2016-10-12  Niels Möller  <nisse@lysator.liu.se>

	* skein256.c (_skein256_expand): New function.
	(skein256_process_block): Use it.
	* testsuite/skein256-test.c (test_skein256_block): Use it.

2016-10-10  Niels Möller  <nisse@lysator.liu.se>

	* skein.h (struct skein256_ctx): New context struct.
	* skein256.c (skein256_init, skein256_update, skein256_digest):
	New functions.
	(skein256_process_block): New internal function.
	* skein256-meta.c (nettle_skein256): New file, new nettle_hash.
	* nettle-meta.h (nettle_skein256): Declare it.
	* examples/nettle-benchmark.c (main): Add benchmarking of
	nettle_skein256
	* testsuite/skein256-test.c (test_main): Add test cases from
	skein-1.3 paper.

2016-10-07  Niels Möller  <nisse@lysator.liu.se>

	* skein256.c (_skein256_block): New file and function.
	* skein.h: New file.
	* Makefile.in (nettle_SOURCES): Added skein256.c.
	(HEADERS): Added skein.h.
	* testsuite/skein256-test.c: New test cases.
	* testsuite/Makefile.in (TS_NETTLE_SOURCES): Added
	skein256-test.c.

2016-10-01  Niels Möller  <nisse@lysator.liu.se>

	* Released nettle-3.3.

2016-09-13  Niels Möller  <nisse@lysator.liu.se>

	* nettle-meta-hashes.c (nettle_hashes): Added SHA3 hashes.
	Reported missing by Thomas Walter.
	* testsuite/meta-hash-test.c: Update test accordingly.

2016-09-07  Niels Möller  <nisse@lysator.liu.se>

	* nettle.texinfo (Elliptic curves): Split into sub-nodes.
	(Miscellaneous functions): Document memeql_sec.
	* NEWS: Mention memeql_sec.

2016-09-06  Niels Möller  <nisse@lysator.liu.se>

	* NEWS: Update for 3.3.

	* configure.ac: Bump package version to 3.3.
	(LIBNETTLE_MINOR): Bump library version to 6.3.
	(LIBHOGWEED_MINOR): Bump library version to 4.3.

2016-09-05  Niels Möller  <nisse@lysator.liu.se>

	* curve25519.h (NETTLE_CURVE25519_RFC7748): New preprocessor
	constant.
	* nettle.texinfo: Document it.

2016-09-03  Niels Möller  <nisse@lysator.liu.se>

	* config.make.in (.SUFFIXES): Delete no longer used .p$(OBJEXT).
